src/thirdparty/requirejs/tests/error/c.js
define(['a'], function (a) {
    return {
       name: 'c',
       a: a
    };
});
